force-app/main/default/objects/SVMXC__SM_Checklist_Result__c/fields/SVMXC__SM_Checklist__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Checklist Object</description>
    <label>Checklist</label>
    <referenceTo>SVMXC__Checklist__c</referenceTo>
    <relationshipLabel>Checklist Results</relationshipLabel>
    <relationshipName>Checklist_Results</relationshipName>
    <type>Lookup</type>
</CustomField>