force-app/main/default/objects/SVMXC__SM_Checklist_Result__c/fields/SVMXC__SM_Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field hold the look up reference to Installed Product Object</description>
    <label>Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Checklist Results</relationshipLabel>
    <relationshipName>Checklist_Results</relationshipName>
    <type>Lookup</type>
</CustomField>