force-app/main/default/objects/SVMXC__SM_Checklist_Result__c/fields/SVMXC__SM_Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the look up to Location Object</description>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Checklist Results</relationshipLabel>
    <relationshipName>Checklist_Results</relationshipName>
    <type>Lookup</type>
</CustomField>