force-app/main/default/objects/SVMXC__SM_Checklist_Result__c/fields/SVMXC__SM_Question_Number__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Question_Number__c</fullName>
    <description>Field to store the Question ID</description>
    <label>Question Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>